<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box_One</string>
    <string name="box_two">Box_Two</string>
    <string name="box_three">Box_Three</string>
    <string name="box_four">Box_Four</string>
    <string name="box_five">Box_Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="txt_howtoplay">How To Play:</string>
    <string name="txt_taptheboxesandbuttons">Tap the boxes and buttons</string>
    <string name="txt_btn_Random">Random</string>
    <string name="txt_btn_Restart">Ok I\'m bored now </string>
    <string name="txt_btn_GoCrazy">Go Crazy</string>
</resources>
